[gd_scene load_steps=9 format=3 uid="uid://b7vi7ofwvn7oj"]

[ext_resource type="Texture2D" uid="uid://83hyrmho20ld" path="res://Inventory/Weapons/weapons/pixil-frame-0.png" id="1_4g0bh"]
[ext_resource type="Script" uid="uid://d4ijpmxh2ltg1" path="res://Inventory/Weapons/Scripts/thrust_weapon.gd" id="1_5553v"]
[ext_resource type="PackedScene" uid="uid://byqdtln48owhi" path="res://General/HurtBox/hurt_box.tscn" id="2_5553v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ej6d"]
size = Vector2(43, 23)

[sub_resource type="Animation" id="Animation_5553v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBoxPosition/HurtBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBoxPosition:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4g0bh"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBoxPosition:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ge8r0"]
resource_name = "thrust"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBoxPosition/HurtBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-50, 0), Vector2(-50, -120)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBoxPosition:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-50, 0), Vector2(-50, -120)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5553v"]
_data = {
&"RESET": SubResource("Animation_5553v"),
&"idle": SubResource("Animation_4g0bh"),
&"thrust": SubResource("Animation_ge8r0")
}

[node name="Spear" type="Node2D"]
script = ExtResource("1_5553v")
attack_speed = 1.5
knockback_force = 100.0
weapon_name = "basic_spear"
metadata/_edit_group_ = true

[node name="WeaponSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4g0bh")

[node name="HurtBoxPosition" type="Node2D" parent="."]

[node name="HurtBox" parent="HurtBoxPosition" instance=ExtResource("2_5553v")]
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxPosition/HurtBox"]
position = Vector2(-2.5, -68.5)
shape = SubResource("RectangleShape2D_3ej6d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5553v")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
